--- a/Client-Side/html/index.html
+++ b/Client-Side/html/index.html
@@ -28,7 +28,7 @@
         <div class="container pt-5 pb-5">
 
             <div class=" top-bar mb-3" style="display: flex;">
-                <button type="button" class="btn whatCanBuild" style="margin-right: auto; background-color: gold">What I
+                <button type="button" class="btn whatCanBuild" style="color: white; font-weight: bold; margin-right: auto; background-color: gold">What I
                     Can Build?
                 </button>
                 
